--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="container bg-light" id="js-que">
         <h3 class="text-center text-info">Some JavaScript common question</h3>
         <div>
-            <h5><span class="fw-bold">Question 1:</span> How JavaScript work?</h5>
+            <h5><span class="fw-bold">Question 1:</span> How does JavaScript work?</h5>
             <p><span class="fw-bold">Answer:</span>JavaScript হচ্ছে একটি interpreted ল্যাংগুয়েজ।এটি <span
                     class="fw-bold">V8 engine</span> এর সাহায্যে চলে। V8 engine একটি ওপেন সোর্স JavaScript engine.এটি
                 C++ ল্যাংগুয়েজ দিয়ে তৈরি করা হয়েছে। এটি Chromium based broweser(Example: Google Chrome) ও Node JS এ
@@ -68,7 +68,7 @@
                 Compiler এর সাহায্যে রান হয়। এর ফলে খুব দ্রুত কোড execute হয়।</p>
         </div>
         <div>
-            <h5><span class="fw-bold">Question 2:</span> What does JavaScript even loop do?</h5>
+            <h5><span class="fw-bold">Question 2:</span> What does JavaScript event loop do?</h5>
             <p><span class="fw-bold">Answer:</span>JavaScript মুলত Event loop অনুসারে কাজ করে। আমরা জানি JavaScript একটি asynchronous programming language. জাভাস্ক্রিপট তার সব প্রোগ্রাম single threaded এর মাধ্যমে execute করে। Event loop কে সাধারনত জাভাস্ক্রিপট লুপের মতো ভাবা যেতে পারে। এক্ষেত্রে লুপ টা জাভাস্ক্রিপট নিজেই পরিচালনা করে। যখন কোড execute করা হয় তখন JavaScript দেখে তার stack এ কি কি টাস্ক আছে, প্রথমে সেগুলো execute করে তারপর শেষ হলে দেখে queue তে কি কি টাস্ক আছে সেগুলো execute করে । এভাবেই এটি লুপের মতো চলতে থাকে। Event loop এভাবেই কাজ করে।
             </p>
            <figure class="text-center">
